--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,10 +84,12 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
+  /* color: rgb(var(--foreground-rgb)); */
+  /* background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
+  background-color: #F5F5F5;
+  color: black;
 }
 
 a {
