--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,6 +92,14 @@ body {
   color: black;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #D9D9D9;
+}
+
 a {
   color: inherit;
   text-decoration: none;
